--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.PI3ES2024T24" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
+         <item name="android:windowFullscreen">true</item>
+
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
+    <style name="MyFullScreenTheme" parent="Base.Theme.PI3ES2024T24">
+        <item name="android:windowFullscreen">true</item>
+    </style>
+
+
     <style name="Theme.PI3ES2024T24" parent="Base.Theme.PI3ES2024T24" />
 </resources>
+
+
