--- a/app/src/main/res/layout/custom_marker_info.xml
+++ b/app/src/main/res/layout/custom_marker_info.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="300dp"
     android:layout_height="match_parent"
     android:padding="8dp"
     android:orientation="vertical">
     <TextView
      android:id="@+id/txt_title"
-     android:layout_width="match_parent"
+     android:layout_width="300dp"
      android:textColor="@color/black"
      android:textSize="18sp"
      tools:text="Olá"
@@ -15,14 +15,14 @@
      android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/txt_address"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:textColor="@color/black"
         android:textSize="16sp"
         tools:text="Olá"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/txt_reference"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:textColor="@android:color/darker_gray"
         android:textSize="16sp"
         tools:text="Olá"
