--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -36,7 +36,7 @@
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:shapeAppearanceOverlay="@style/fab_round"
         android:contentDescription="TODO"
 
@@ -53,7 +53,7 @@
         app:layout_constraintBottom_toTopOf="@+id/fab_expand"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:shapeAppearanceOverlay="@style/fab_round"
         android:contentDescription="TODO"
         android:focusable="true" />
@@ -69,7 +69,7 @@
         app:layout_constraintBottom_toTopOf="@+id/fab_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:shapeAppearanceOverlay="@style/fab_round"
         android:contentDescription="TODO"
         android:focusable="true" />
